@@ -4,6 +4,7 @@ It's written in Java and aims to be run on any system (windows, linux or mac).
 This program runs with Java 1.6 or later
 
 Changelog in 1.3.2 :
+Added functionality : Export list to a file
 Added functionality : Credits for german translation
 Added functionality : The release nb can now either be located in the comment field or the releaseNb field. The configuration must be deleted then readded or the dat must be updated
 for this modification to take effect
